# RoboRTS

./: README.md
decision/: CMakeLists.txt  package.xml  pull_decision_script.sh  push_decision_no_merge.sh  push_decision_script.sh
decision/include/: enum_class.h  share_head.h
decision/include/tool/: tool.h
decision/src/: ConditionNode.h  FindAvailableShootPositionWithGuardMsg.h  MoveToEnermyArea.h  PreConditions.h  line_iterator.h  test.h  test_decision.cpp
decision/src/PubShoot/: pub_shoot.cpp  pub_shoot.h
decision/src/SimpleActions/: simple_actions.cpp  simple_actions.h
decision/src/awaken/: awaken.cpp  awaken.h
decision/src/blackboard/: blackboard.cpp  blackboard.h  gimbal_control.cpp  gimbal_control.h  kalman_filter.cpp  kalman_filter.h  pid.cpp  pid.h
decision/src/bt_test_files/: bt_by_groot.xml  bt_by_groot3.xml  bt_by_groot5.21.xml  bt_test.xml  test05.15.xml  test05.21.xml
decision/src/config/: decision.prototxt
decision/src/defend/: defend.h
decision/src/escape/: escape.cpp  escape.h
decision/src/executor/: chassis_executor.cpp  chassis_executor.h  gimbal_executor.cpp  gimbal_executor.h
decision/src/functions/: Functions.cpp  Functions.h
decision/src/move/: move_goal.cpp  move_goal.h
decision/src/parameters/: decision_goal.prototxt
decision/src/patrol/: patrol.cpp  patrol.h
decision/src/proto/: decision.pb.cc  decision.pb.h  decision.proto
decision/src/shoot/: shoot.cpp  shoot.h  shoot_action.cpp  shoot_action.h
decision/src/swing/: swing_idle.cpp  swing_idle.h
decision/src/tool/: tool.cpp
decision/src/turn/: turn.cpp  turn.h
roborts_base/: README.md
roborts_base/src/: gimbal.cpp
roborts_bringup/config/: roborts_config.yaml
roborts_bringup/launch/: mapping_stage.launch  roborts.launch  roborts_stage.launch  static_tf.launch  test_decision.launch  test_decision_no_debug.launch  test_projectile.launch  test_swing.launch  wzw_decision.launch
roborts_bringup/maps/: icra2022.pgm
roborts_bringup/rviz/: roborts.rviz
roborts_bringup/worlds/: icra2022.world
roborts_camera/: CMakeLists.txt  camera_base.h  camera_node.cpp  camera_node.h
roborts_camera/config/: bhp_blue.Config  bph.Config  bph_most_light.Config  bph_yellow.Config  camera_param.prototxt
roborts_camera/mv/: CMakeLists.txt  mv_driver.cpp  mv_driver.h
roborts_costmap/config/: inflation_layer_config.prototxt
roborts_costmap/include/costmap/: static_layer.h
roborts_costmap/src/: static_layer.cpp
roborts_decision/: CMakeLists.txt  decision.cpp
roborts_decision/action_node/: FindAvailableShootPositionWithGuardMsg.h  InitTheRobot.h  MoveToBloodAddArea.h  MoveToBootArea.h  MoveToBulletsAddArea.h  MoveToEnermyArea.h  Patrol.h  Shoot.h  Swing360.h
roborts_decision/behavior_tree/: 14.22.xml  behavior_state.h  bt_by_groot.xml  bt_test.xml  bt_test0.xml
roborts_decision/blackboard/: blackboard.cpp  blackboard.h
roborts_decision/condition_node/: ConditionNode.h
roborts_decision/config/: shoot_config.yaml
roborts_decision/executor/: chassis_executor.cpp  chassis_executor.h  gimbal_executor.cpp  gimbal_executor.h
roborts_decision/proto/: decision.pb.cc  decision.pb.h  decision.proto
roborts_detection/armor_detection/: CMakeLists.txt  armor_detection_algorithms.h  armor_detection_client.cpp  armor_detection_node.cpp  armor_detection_node.h
roborts_detection/armor_detection/config/: armor_detection.prototxt
roborts_detection/armor_detection/yolox_car/: CMakeLists.txt  armor_process.cpp  armor_process.h  yolox_car.cpp  yolox_car.h
roborts_detection/armor_detection/yolox_car/config/: yolox_car_config.yaml
roborts_detection/armor_detection/yolox_car/include/: yolox_s_car.h
roborts_detection/armor_detection/yolox_car/params/: yolox_s_car_v1_1.param  yolox_s_car_v2_0.param
roborts_detection/armor_detection/yolox_s_car_v1_0_test/: CMakeLists.txt  detect_test.cpp
roborts_detection/armor_detection/yolox_s_car_v1_0_test/include/: yolox_s_car.h
roborts_laser/: CMakeLists.txt  cmake_beifen.txt  package.xml
roborts_laser/include/ldcp/: data_types.h  device.h  device_base.h  error.h  session.h  transport.h  utility.h
roborts_laser/src/: device.cpp  roborts_laser_node.cpp  session.cpp  transport.cpp
roborts_localization/: CMakeLists.txt  localization_config.h  localization_node.cpp  localization_node.h
roborts_localization/amcl/: CMakeLists.txt  amcl.cpp  amcl.h
roborts_localization/amcl/config/: amcl.yaml
roborts_localization/amcl/particle_filter/: particle_filter.cpp  particle_filter.h
roborts_localization/config/: localization.yaml
roborts_msgs/: CMakeLists.txt
roborts_msgs/msg/: ArmorMsg.msg  ArmorMsgs.msg
roborts_msgs/msg/gimbal/: ShootControl.msg
roborts_msgs/msg/guard/: CarMsg.msg  CarMsgs.msg
roborts_planning/: CMakeLists.txt
roborts_planning/global_planner/: global_planner_node.cpp  global_planner_node.h  global_planner_test.cpp
roborts_planning/local_planner/include/local_planner/: local_planner_node.h
roborts_planning/local_planner/src/: local_planner_node.cpp  vel_converter.cpp
roborts_planning/local_planner/timed_elastic_band/config/: timed_elastic_band.prototxt
roborts_planning/local_planner/timed_elastic_band/src/: teb_local_planner.cpp  teb_optimal.cpp
roborts_socket/: CMakeLists.txt  client_node.cpp  client_node.h  package.xml
roborts_test/: CMakeLists.txt  package.xml
roborts_test/config/: shoot.yaml
roborts_test/src/: shoot.cpp  shoot.h  test_chassis.cpp  test_game_zone_pub.cpp  test_image_process.cpp  test_projectile_model.cpp  test_pub.cpp  test_scan_sub.cpp  test_sub.cpp
roborts_tracking/: tracking_test.cpp
rplidar_ros/src/: node.cpp
