<package>
    <name>roborts_socket</name>
    <version>1.0.0</version>
    <description>
        The roborts socket package provides client
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>

    
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roborts_msgs</build_depend>

   
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>roborts_msgs</run_depend>


    <export>
    </export>

</package>
